Media: Ensure gallery placeholder visible in mobile

--- a/client/post-editor/media-modal/gallery/style.scss
+++ b/client/post-editor/media-modal/gallery/style.scss
@@ -136,17 +136,14 @@ input.editor-media-modal-gallery__caption[type="text"] {
 }
 
 .editor-media-modal-gallery__preview-wrapper {
+	position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
 	box-sizing: border-box;
 	overflow-y: auto;
 	padding: 16px;
-
-	@include breakpoint( ">660px" ) {
-		position: absolute;
-			top: 0;
-			right: 0;
-			bottom: 0;
-			left: 0;
-	}
 }
 
 .editor-media-modal-gallery__preview-shortcode {
@@ -168,7 +165,8 @@ input.editor-media-modal-gallery__caption[type="text"] {
 		position: absolute;
 			left: 50%;
 		display: block;
-		margin-left: -50%;
+		width: 90%;
+		margin-left: -45%;
 		transition: 0.2s opacity cubic-bezier( 0.25, 0.5, 0.5, 0.9 );
 		opacity: 0;
 
